--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
   <ItemGroup>
     <Compile Include="DAL_Checkin.cs" />
     <Compile Include="DAL_Employee.cs" />
+    <Compile Include="DAL_Phong.cs" />
     <Compile Include="DAL_WorkShift.cs" />
     <Compile Include="MyDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
